--- a/preprocessing/Eksperimen_Yudhistira_Paksi.ipynb
+++ b/preprocessing/Eksperimen_Yudhistira_Paksi.ipynb
@@ -23,6 +23,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Dataset saya dapat dari github, saya lupa URL exact datanya karena ini saya ambil dari project lama saya"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "fKADPWcFKlj3"
       },
@@ -89,14 +96,21 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "f3YIEnAFKrKL"
-      },
+      "metadata": {},
       "source": [
-        "# Load the dataset\n",
-        "df = pd.read_csv('indo_spam.csv')\n",
+        "## Ini adalah dataset yang digunakan untuk eksperimen ini, berupa SMS spam dan ham."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load Data setnya\n",
+        "df = pd.read_csv('C:/Users/PC/Documents/Project_akhir_MLFlow/Eksperimen_SML_Yudhistira_Paksi/indo_spam_raw.csv')\n",
         "\n",
-        "# Display basic information\n",
+        "# Display informasi umum\n",
         "print('Dataset loaded successfully!')\n",
         "print(f'Dataset shape: {df.shape}')\n",
         "print(f'Columns: {list(df.columns)}')\n",
